[package]
name = "hyper_latency"
version = "0.1.0"
edition = "2021"

[dependencies]
err_mac = { git = "https://github.com/copiumnicus/err_mac.git", rev = "08f6335" }
serde_json = "1.0.100"
serde = { version = "1.0.166", features = ["derive"] }
serde_with = "3"
url = "2.5.4"
parking_lot = "0.12.3"
tungstenite = { version = "0.21.0", features = ["native-tls"] }
timed = { git = "https://github.com/copiumnicus/timed.git" }